AArch64: arraycopy causes segfaults in SATB during garbage collection

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b110
    • aarch64

        I messed up the implementation of OOP arraycopy: the
        arrayof_oop_{dis, con}joint_arraycopy_uninit targets don't work correctly because they generate the same code as the versions for initialized destination.

              Assignee:
              Andrew Haley
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: