8150045: arraycopy causes segfaults in SATB during garbage collection

Reviewed-by: roland